# exasm

./: .clang-format  .gitignore  LICENSE  README.md  build-all-variant.sh  index.wasm  instructions.html  meson.build  meson_options.txt
.github/workflows/: deploy.yaml
12/: index.html  index.wasm  instructions.html
21/: index.js  index.wasm  instructions.html  style.css
cross/: wasm.txt
etc/: wasm.txt
isa/: basic.json  ex_12.json  ex_21.json  ex_t.json  extra.json
src/: asmio.cc  asmio.h  emulator.cc  emulator.h  exasm.cc  exasm_test.cc  exemu.cc  exemu_test.cc  generate_asm_parser.py  generate_asm_writer.py  generate_decoder.py  generate_doc.py  generate_encoder.py  generate_executor.py  generate_inst_mem_writer.py  generate_inst_name_to_enum.py  generate_inst_name_writer.py  generate_inst_traits.py  generate_inst_type_enum.py  generate_latex_doc.py  inst_reader.py  insts.h  meson.build  metadata.py  wasm_shell.html  wasm_shell_webas.html  wasm_shell_webemu.html  webas.cc  webemu.cc
src/isa/: basic.json  ex_t.json
src/web/: driver.js  style.css  wasm_shell_webemu.html
t/: driver.js  index.wasm  instructions.html
tests/asm/: branch_simple.in  branch_simple.out  ex_t.in  imm_simple.in  mem_simple.in  mem_simple.out  n_invalid_imm.in  n_invalid_operand.in  n_invalid_operand_2.in  n_label_duplicate.in  n_missing_operand.in  n_operand_comment.in  reg_arith_simple.in  reg_arith_simple.out  syntax-rubustness.in  y_branch_simple.in  y_branch_simple.out  y_ex_t.out  y_imm_sign.in  y_imm_sign.out  y_imm_simple.out  y_jump_to_label.in  y_jump_to_label.out  y_label_simple.in  y_label_simple.out  y_long_jump_backward.in  y_long_jump_backward.out  y_long_jump_backward_2.in  y_long_jump_backward_2.out  y_long_jump_backward_3.in  y_long_jump_backward_3.out  y_long_jump_backward_4.in  y_long_jump_backward_4.out  y_long_jump_forward.in  y_long_jump_forward.out  y_long_jump_forward_2.in  y_long_jump_forward_2.out  y_long_jump_forward_3.in  y_long_jump_forward_3.out  y_long_jump_forward_4.in  (+15 more)
tests/emu/: branch.in  branch.out  ex_t.in  imm_arith.in  imm_arith.out  mem.in  n_unaligned_word_access.in  n_unaligned_word_access.op  n_unaligned_word_access_2.in  n_unaligned_word_access_2.op  reg_arith.in  reg_arith.out  y_branch.in  y_branch.op  y_branch.out  y_break_simple.in  y_break_simple.op  y_ex_t.op  y_ex_t.out  y_imm_arith.op  y_mem.in  y_mem.op  y_mem.out  y_reg_arith.in  y_reg_arith.op  y_reverse_after_branch.in  y_reverse_after_branch.op
