option(
  'html_install_dir',
  type : 'string',
  value : '/opt/exasm',
  description : 'Prefix for installing HTML artifacts'
)
option(
  'ex_inst_t',
  type : 'feature',
  value : 'disabled',
  description : 'Enable extension instructions (T)'
)
option(
  'ex_inst_12',
  type : 'feature',
  value : 'disabled',
  description : 'My extension for task 1'
)
