option(
  'html_install_dir',
  type : 'string',
  value : '/opt/exasm',
  description : 'Prefix for installing HTML artifacts'
)
option(
  'latex_doc',
  type : 'feature',
  value : 'disabled',
  description : 'Enable generation of LaTeX documentation'
)
option(
  'ex_inst_t',
  type : 'feature',
  value : 'disabled',
  description : 'Enable extension instructions (T)'
)
option(
  'ex_inst_12',
  type : 'feature',
  value : 'disabled',
  description : 'My extension for task 1 (rev. 2)'
)
option(
  'ex_inst_21',
  type : 'feature',
  value : 'disabled',
  description : 'My extension for task 2'
)
